...
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RFY-xS-ke9">
                                <rect key="frame" x="300" y="18.5" width="300.5" height="169"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Play" backgroundImage="wood_big_button">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <segue destination="bZn-x8-R0I" kind="presentation" id="usM-lL-f4w"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zuf-dN-5Zl">
                                <rect key="frame" x="300" y="207" width="133.5" height="113"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                <state key="normal" title="Settings" backgroundImage="wood_small_button">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <segue destination="WF8-FB-43l" kind="presentation" id="gNM-gO-hyj"/>
                                </connections>
                            </button>
...
                                    <constraint firstItem="w1v-it-syA" firstAttribute="centerY" secondItem="vCl-gk-6vg" secondAttribute="centerY" id="1Vl-d0-Chg"/>
                                    <constraint firstItem="w1v-it-syA" firstAttribute="centerX" secondItem="vCl-gk-6vg" secondAttribute="centerX" id="3HU-ps-NUH"/>
                                </constraints>
                            </view>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4ho-rM-JTa">
                                <rect key="frame" x="66.5" y="37.5" width="67" height="37.5"/>
                                <state key="normal" title="Back" backgroundImage="wood_small_button">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <segue destination="oAc-R2-5lY" kind="unwind" unwindAction="unwindToMainViewControllerWithUnwindSegue:" id="cZF-Nn-ngZ"/>
                                </connections>
                            </button>
...
                                <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7s9-XN-KC2">
                                <rect key="frame" x="367" y="150" width="166.5" height="75"/>
                                <color key="backgroundColor" red="0.0" green="0.82436042750000005" blue="0.78599053890000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                <state key="normal" title="Play Again">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="playAgain:" destination="NVk-0w-McW" eventType="touchUpInside" id="auu-rg-nZ9"/>
                                </connections>
                            </button>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A7e-tm-M9p">
                                <rect key="frame" x="367" y="262.5" width="166.5" height="75"/>
                                <color key="backgroundColor" red="0.0" green="0.82436042750000005" blue="0.78599053890000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                <state key="normal" title="Playlist">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="toPlaylist:" destination="NVk-0w-McW" eventType="touchUpInside" id="JJH-vE-PoM"/>
                                </connections>
                            </button>
...
                            </button>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wood_lyric_bg" translatesAutoresizingMaskIntoConstraints="NO" id="rXc-4m-aXp">
                                <rect key="frame" x="0.0" y="71.5" width="667" height="112.5"/>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bZ4-DH-kWB">
                                <rect key="frame" x="66.5" y="19" width="67" height="37.5"/>
                                <state key="normal" title="Pause">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="pauseSong:" destination="zj7-6h-Apx" eventType="touchUpInside" id="Exz-Dh-wGW"/>
                                </connections>
                            </button>
...
